# PASTA

./: Dockerfile  README.md  WEB_UI_README.md  demo.py  docker-compose.yml  environment.yml  pyproject.toml  web_ui.py
analysis/: A0_base_analysis.ipynb  A2_Archetype.ipynb  A3_Data_processing.ipynb  IHC_detection.groovy  benchmark_metrics.py
data/masks/: demo.geojson
pasta/: __init__.py  create_patches_fp.py  dataset.py  encoder.py  inference.py  inference_parallel.py  inference_without_process.py  model.py  model_transform.py  model_utils.py  process_patch_h5.py  task_manager.py  train.py  utils.py  web_utils.py
pasta/configs/: demo.json  inference.json  pathways.json  train.json
pasta/configs/gene_names/: rep_gene_names.txt
pasta/wsi_core/: WholeSlideImage.py  batch_process_utils.py  wsi_utils.py
results/AA/: SFA_sample_total.tsv  archetypes_AA.pkl  feature_ab_community.pkl  feature_ne_community.pkl  rss_AA.pkl
